# partyless

./: .gitignore  BUILDING.md  Cargo.toml  Config.toml  Containerfile  Containerfile.nginx  Containerfile.server  LICENSE  README.md
nginx/: entrypoint.sh
nginx/templates/: default-ssl.conf.template  default.conf.template
quadlet/: partyless-nginx-debug.container  partyless-nginx.container  partyless-server.container  partyless.pod
src/: main.rs
static/: index.html  styles.css
templates/: event.mustache
