[package]
name = "partyless"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
lazy_static = "1.5.0"
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["alloc", "derive"] }
tokio = { version = "1.48.0", features = ["full", "signal"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
